--- a/frontend/src/main/webapp/assets/css/tela_alteracao_cadastro_usuario.css
+++ b/frontend/src/main/webapp/assets/css/tela_alteracao_cadastro_usuario.css
@@ -1,39 +1,54 @@
 html,
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #f8f9fa;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f9fa;
 }
-
 .container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
-  width: 100%;
-  max-width: 420px;
-  padding: 1.5rem;
+    width: 100%;
+    max-width: 420px;
+    padding: 1.5rem;
+    box-sizing: border-box;
+    flex-shrink: 1;
+    max-height: 100%; /* esta é a chave: limitar ao pai */
+}
+/*
+.container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.card {
+    width: 100%;
+    max-width: 420px;
+    padding: 1.5rem;
+}
+    */
+
 h4 {
-  font-size: 1rem;
-  margin-bottom: 1rem;
+    font-size: 1rem;
+    margin-bottom: 1rem;
 }
 
 label.form-label {
-  font-size: 0.9rem;
+    font-size: 0.9rem;
 }
 
 .error-message {
-  color: red;
-  font-size: 0.8rem;
-  display: none;
+    color: red;
+    font-size: 0.8rem;
+    display: none;
 }
 
 .input-error {
-  border-color: red !important;
+    border-color: red !important;
 }
