Implementando cadastro Itens da Nota Fiscal

--- a/frontend/src/main/webapp/assets/css/tela_cadastro_recebimento.css
+++ b/frontend/src/main/webapp/assets/css/tela_cadastro_recebimento.css
@@ -4,6 +4,10 @@
     border: 1px solid #ccc;
 }
 
+.titulo-cad-recebimento {
+    font-size: 1.5rem;
+}
+
 .form-section-title {
     color: white;
     padding: 10px;
