Adicionado relatorio Laboratorio, dropwdownlist botoes consulta notas fiscais, menu responsivo por role

--- a/frontend/src/main/webapp/assets/css/tela_cadastro_recebimento.css
+++ b/frontend/src/main/webapp/assets/css/tela_cadastro_recebimento.css
@@ -68,3 +68,15 @@ button.campo-desabilitado {
 section.card.campo-desabilitado {
     opacity: 0.85;
 }
+
+.dropdown-menu-auto {
+    min-width: 0 !important; /* remove min-width padrão */
+    width: auto !important; /* largura do conteúdo */
+    white-space: nowrap; /* sem quebra de linha */
+    position: absolute; /* garante que saia da célula */
+    background-color: rgb(203, 216, 228);
+}
+
+td {
+    width: auto;
+}
